# hvq-hadronization

./: CMakeLists.txt  README  compile
src/: CMakeLists.txt  analysis.f  checkformat.f  common.f  compyth.f  copypart13.f  copypartoscar.f  endprog.f  filter.f  fragdecay.f  idtab.f  initpythia.f  isheavymeson.f  isparton.f  ityp2pdg.f  oscfileheaderio.f  parameter_inp.f  pdg2id.f  pythia-6.4.21.f  rand.f  readevent13.f  readeventoscar.f  recomb.f  rotbos.f  writeevent13.f  writeeventoscar.f
